add about dialog

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">DiaDiary</string>
     <string name="app_desc">Дневник Диабетика (insulin, glucose etc)</string>
+    <string name="action_about">About</string>
 </resources>
