--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,5 +65,6 @@
     <string name="dialog_delete">Delete</string>
     <string name="insulin_inject_unit">unit(s)</string>
     <string name="glucose_add_label_when">When reading</string>
+    <string name="action_about">About</string>
 
 </resources>
