--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,11 @@
     <string name="planned_regular">Regular</string>
     <string name="planned_additionals">Additional</string>
 
-    <string name="action_reinitdb">Reinit DB</string>
+    <string name="action_database">Database</string>
+    <string name="action_db_reinit">Reinit DB</string>
+    <string name="action_db_import">Import data</string>
+    <string name="action_db_export">Export data</string>
+
     <string name="insulin_desc_name">Insulin name:</string>
     <string name="insulin_desc_firm">Firm:</string>
     <string name="insulin_desc_type">Type:</string>
@@ -67,6 +71,15 @@
     <string name="glucose_add_label_when">When reading</string>
     <string name="action_about">About</string>
     <string name="action_date_label_from">From</string>
-    <string name="action_date_label_into">To</string>
+    <string name="action_date_label_into">-</string>
+    <string name="no_filemanager_installed">Not found OI file manager</string>
+    <string name="title_activity_database">DatabaseActivity</string>
+    <string name="calendar_title">Calendar</string>
+    <string name="pressure_label_title">Pressure:</string>
+    <string name="pressure_label_unit">mmHg</string>
+    <string name="pressure_add_title">Add pressure reading result</string>
+    <string name="pressure_add_label_systole">Systole</string>
+    <string name="pressure_add_label_diastolic">Diastolic</string>
+    <string name="menu_event_add_pressure">Add pressure</string>
 
 </resources>
