--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,5 +89,6 @@
     <string name="glucoce_label_unit">mmol/L</string>
     <string name="average_glucose_label">Average glucose:</string>
     <string name="tv_average_glucose_value">0.0</string>
+    <string name="action_products">Products</string>
 
 </resources>
