--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,9 +120,16 @@
     <string name="prod_item_add_title">Product add</string>
     <string name="menu_add_label_weight">Weight</string>
     <string name="button_select">Select</string>
-    <string name="button_select_all">Select from all</string>
+    <string name="button_select_all">All</string>
     <string name="dialog_import_title">Import products and groups from ...</string>
     <string name="dialog_import_from_assets">Internal</string>
     <string name="dialog_import_from_file">File</string>
+    <string name="menu_add_label_prot">Prot</string>
+    <string name="menu_add_label_fats">Fat</string>
+    <string name="menu_add_label_carb">Carb</string>
+    <string name="menu_add_label_zero">0</string>
+    <string name="menu_add_label_gi">GI</string>
+    <string name="menu_add_label_xe">BE</string>
+    <string name="menu_add_hint_prot">Protheine</string>
 
 </resources>
