update user profile activity? refactoring code

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -15,4 +15,30 @@
     <string name="planned_regular">Постоянно</string>
     <string name="pressure_add_label_systole">Верхнее</string>
     <string name="pressure_add_label_diastolic">Нижнее</string>
+    <string name="diab_type_list_1">Тип 1 (инсулинозависимый)</string>
+    <string name="diab_type_list_2">Тип 2 (возрастной)</string>
+    <string name="dialog_add_k1_title">Добавить значение К1, точно ? </string>
+    <string name="dialog_del_k1_title">Удалить текущее значение К1, точно ?</string>
+    <string name="dialog_delete">Удалить</string>
+    <string name="dialog_edit">Редактировать</string>
+    <string name="menu_add_label_gi">ГИ</string>
+    <string name="menu_add_label_fats">Жиры</string>
+    <string name="menu_add_label_carb">Углеводы</string>
+    <string name="menu_add_hint_prot">Белки</string>
+    <string name="menu_add_label_xe">ХЕ</string>
+    <string name="user_profile_age">Возраст</string>
+    <string name="user_profile_diab_type">Тип диабета</string>
+    <string name="user_profile_glucose_measure">Глюкоза в</string>
+    <string name="user_profile_glucose_range">Диапазон</string>
+    <string name="user_profile_label">Профайл</string>
+    <string name="user_profile_sex">Пол</string>
+    <string name="user_profile_name">Имя</string>
+    <string name="user_profile_K1_list">Список К1</string>
+    <string name="user_k1_value"></string>
+    <string name="menu_label">Меню:</string>
+    <string name="no_filemanager_installed">Не найден OI file manager</string>
+    <string name="pressure_add_label_pulse">Пульс</string>
+    <string name="pressure_add_title">Добавить результат давления</string>
+    <string name="pressure_label_unit">ммРс</string>
+    <string name="prod_item_add_title">Добавить продукт</string>
 </resources>
