--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,5 +139,7 @@
     <string name="dialog_add_k1_title">Add K1 value to list, are you shure ?</string>
     <string name="dialog_del_k1_title">Remove current K1 from list, are you shure ?</string>
     <string name="user_profile_date_of_birth">Date of birth</string>
+    <string name="user_profile_weight">Weight</string>
+    <string name="user_profile_growth">Growth</string>
 
 </resources>
