add translations, refactoring

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -23,7 +23,7 @@
     <string name="dialog_edit">Редактировать</string>
     <string name="menu_add_label_gi">ГИ</string>
     <string name="menu_add_label_fats">Жиры</string>
-    <string name="menu_add_label_carb">Угл-ды</string>
+    <string name="menu_add_label_carb">Угл.</string>
     <string name="menu_add_hint_prot">Белки</string>
     <string name="menu_add_label_xe">ХЕ</string>
     <string name="user_profile_age">Полных лет</string>
@@ -34,7 +34,7 @@
     <string name="user_profile_sex">Пол</string>
     <string name="user_profile_name">Имя</string>
     <string name="user_profile_K1_list">Список К1</string>
-    <string name="user_k1_value"></string>
+    <string name="user_k1_value">К1</string>
     <string name="menu_label">Меню:</string>
     <string name="no_filemanager_installed">Не найден OI file manager</string>
     <string name="pressure_add_label_pulse">Пульс</string>
@@ -54,4 +54,53 @@
     <string name="config_user_profile">Профайл</string>
     <string name="user_profile_weight">Вес</string>
     <string name="user_profile_growth">Рост</string>
+    <string name="menu_add_label_weight">Вес</string>
+    <string name="menu_add_label_product">Продукт</string>
+    <string name="menu_add_label_name">Название меню</string>
+    <string name="label_mode_add">Добавить</string>
+    <string name="label_mode_edit">Правка</string>
+    <string name="pulse_label_unit">умин</string>
+    <string name="prod_menu_add_title">Добавить меню</string>
+    <string name="prod_menu_add_label_group">Выбрать группу продуктов</string>
+    <string name="common_label_time">Время</string>
+    <string name="config_setting">Настройки</string>
+    <string name="button_insulin_color">Цвет</string>
+    <string name="gender_list_list_1">Муж</string>
+    <string name="gender_list_list_2">Жен</string>
+    <string name="glucoce_label_unit">ммоль/Л</string>
+    <string name="glucose_add_label_comment">Комментарий</string>
+    <string name="glucose_add_label_concentration">Значение</string>
+    <string name="dialog_period_list_1"></string>
+    <string name="glucose_measure_list_2">мг/дЛ</string>
+    <string name="injection_label">Инъекция</string>
+    <string name="glucose_add_title">Добавить значение сахара</string>
+    <string name="glucose_label_title">Значение:</string>
+    <string name="glucose_add_label_when">Когда измерено</string>
+    <string name="glucose_add_label_notes">Примечание</string>
+    <string name="glucose_add_label_measure" translatable="false"></string>
+    <string name="glucose_measure_list_1">ммоль/Л</string>
+    <string name="injection_total_label">Доза инсулина:</string>
+    <string name="insulin_K1_dose"></string>
+    <string name="insulin_desc_label_max">макс:</string>
+    <string name="menu_add_label_groups">Группы продуктов</string>
+    <string name="menu_add_label_prot">Белки</string>
+    <string name="title_activity_database">Управление БД</string>
+    <string name="title_activity_insulin_desc">Инсулины</string>
+    <string name="common_label_K1">К1</string>
+    <string name="common_label_comment">Комментарий</string>
+    <string name="common_label_date">Дата</string>
+    <string name="average_glucose_label">Границы сахара</string>
+    <string name="action_comment">Комментарий:</string>
+    <string name="action_database">Управление данными</string>
+    <string name="activity_settings_title">Настройки</string>
+    <string name="activity_profile_title">Профиль</string>
+    <string name="activity_products_title">Продукты</string>
+    <string name="activity_menuadd_title">Добавить меню</string>
+    <string name="action_settings">Настройки</string>
+    <string name="action_product_menu_add">Добавить меню</string>
+    <string name="action_product_item">Продукты</string>
+    <string name="action_product_group">Группы продуктов</string>
+    <string name="action_date_label_from">С</string>
+    <string name="insulin_desc_label_min">мин:</string>
+    <string name="insulin_inject_unit">единиц(ы)</string>
 </resources>
