--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -126,4 +126,6 @@
 
 
     <string name="dialog_period_list_1">День</string>
+    <string name="dialog_add_weight_message">Введите вес продукта</string>
+    <string name="dialog_add_weight_title">Вес</string>
 </resources>
